--- a/AppVecinos.Web/Views/Shared/_Layout.cshtml
+++ b/AppVecinos.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        @if (ViewData["HideMenu"] == null || !(bool)ViewData["HideMenu"])
+        {
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppVecinos.Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -29,6 +31,8 @@
                 </div>
             </div>
         </nav>
+        }
+       
     </header>
     <div class="container">
         <main role="main" class="pb-3">
