--- a/AppVecinos.Web/Views/Shared/_Layout.cshtml.css
+++ b/AppVecinos.Web/Views/Shared/_Layout.cshtml.css
@@ -53,5 +53,5 @@ button.accept-policy {
 }
 
 .text-gray {
-  color: #605f5b !important; /* dark gray */
+  color: #676b6e !important; /* dark gray */
 }
