Color changed in Login view

--- a/AppVecinos.Web/Views/Account/Login.cshtml
+++ b/AppVecinos.Web/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Iniciar Sesión";
 }
 
-<h2 class="text-center text-primary mt-5">Iniciar Sesión</h2>
+<h2 class="text-center text-gray mt-5">Iniciar Sesión</h2>
 
 @if (ViewBag.ErrorMessage != null)
 {
@@ -23,7 +23,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required />
             </div>
             <div class="d-grid">
-                <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
+                <button type="submit" class="btn btn-turquoise btn-block">Iniciar Sesión</button>
             </div>
         </form>
     </div>
